fixed overflow breaking animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,16 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 100%;
+  overflow-x: clip;
+}
+
+@supports not (overflow-x: clip) {
+  html,
+  body,
+  #__next {
+    overflow-x: hidden; /* fallback for older Safari/Android */
+  }
 }
 
 @layer utilities {
@@ -40,4 +50,8 @@ body {
 }
 .animate-gradient-x {
   animation: gradient-x 3s ease infinite;
+}
+
+* {
+  outline: 1px solid red;
 }
